<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vova.amo.lab1.CalculateActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout" android:layout_centerVertical="true" android:layout_alignParentStart="true">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enter_a"
                  android:labelFor="@+id/editText1"
                  android:layout_gravity="center_horizontal" android:id="@+id/label_1"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:id="@+id/editText1"
                android:inputType="number" android:textAlignment="center"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enter_b"
                  android:labelFor="@+id/editText2"
                  android:layout_gravity="center_horizontal" android:id="@+id/label_2"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2" android:inputType="text|number" android:textAlignment="center"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enter_c"
                  android:labelFor="@+id/editText3"
                  android:layout_gravity="center_horizontal" android:id="@+id/label_3"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3" android:textAlignment="center"/>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/first"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/linearLayout" android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"/>
    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_button"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculate_button"
            android:layout_above="@+id/clear_button" android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResult"
            android:layout_marginBottom="12dp" android:layout_above="@+id/calculate_button"
            android:layout_centerHorizontal="true"/>


</RelativeLayout>
